--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,6 @@ encoding//src/main/webapp/Toma/pages/chart_popular.jsp=UTF-8
 encoding//src/main/webapp/Toma/pages/checkEmail.jsp=UTF-8
 encoding//src/main/webapp/Toma/pages/joinProcess.jsp=UTF-8
 encoding//src/main/webapp/Toma/pages/loginProcess.jsp=UTF-8
+encoding//src/main/webapp/Toma/pages/logout.jsp=UTF-8
 encoding//src/main/webapp/Toma/pages/updateProfile.jsp=UTF-8
 encoding/<project>=UTF-8
